Another attempt to fix scroll on mobile

--- a/public/styles.css
+++ b/public/styles.css
@@ -118,7 +118,7 @@ h1.logo {
 }
 
 
-/* GUESS/SUGGESTIONS */
+/* SUGGESTIONS */
 
 .guess-input-wrapper {
   width: 100%;
@@ -126,18 +126,15 @@ h1.logo {
 }
 
 .autocomplete-wrapper {
-  display: flex;
-  width: 100%;
   position: absolute;
-  bottom: 100%;
+  bottom: 100%; /* Positions autocomplete above the input */
   left: 0;
   width: 100%;
 }
 
 ul.autocomplete-list {  
-  
   max-height: 160px;
-  overflow-y: scroll;
+  overflow-y: auto; /* auto is better for mobile scrolling */
   margin: 0;
   padding: 0;
   list-style: none;
@@ -145,9 +142,10 @@ ul.autocomplete-list {
   background: #fff;
   color: black;
   border-radius: 8px;
-  z-index: 1000;
   font-family: 'Arial';
   z-index: 2000;
+  box-shadow: 0px 4px 10px rgba(0,0,0,0.1); /* improves visibility */
+  -webkit-overflow-scrolling: touch; /* smoother scrolling on iOS */
 }
 
 ul.autocomplete-list li {
@@ -156,9 +154,14 @@ ul.autocomplete-list li {
   border-bottom: 1px solid #ccc;
 }
 
+ul.autocomplete-list li:last-child {
+  border-bottom: none;
+}
+
 .autocomplete-list li:hover {
   background-color: #eee;
 }
+
 
 
 /* INPUT & BUTTONS */
